--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-redux": "^7.2.0",
     "react-responsive": "^8.1.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
