--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": 0,
     "camelcase": 0,
-    "jsx-a11y/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": "off",
+    "import/no-unresolved": [2, { "caseSensitive": false }]
   },
   "settings": {
     "import/resolver": {
